[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ItsPrompt"
version = "0.1.0"
authors = [
    {name = "ItsNameless"}
]
description = "Prompting - the fancy way"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/TheItsProjects/ItsPrompt"
Repository = "https://github.com/TheItsProjects/ItsPrompt"
"Issue Tracker" = "https://github.com/TheItsProjects/ItsPrompt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "ItsPrompt",
    "ItsPrompt.*"
]
